oooof huge thinking error hopefully fixed now

--- a/Randomly_select_wichtel.ipynb
+++ b/Randomly_select_wichtel.ipynb
@@ -13,7 +13,7 @@
    "id": "bc400a21-f28f-49fe-ae2e-013d643225a0",
    "metadata": {},
    "source": [
-    "## Idea take initial list of wichtel and sample pairs randomly.\n",
+    "## Idea take initial list of wichtel and randomly shuffeling pairs.\n",
     "Apply some constrains to the output list:\n",
     "- identical pairs\n",
     "- no couples as wichtel pairs\n",
@@ -38,18 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "fdeb26fe-cae1-4dad-88bd-36552487b5c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "people = [\"Peter\", \"Christine\", \"Harald\", \"Heinz\", \"Karl\", \"Gundula\", \"Luke\", \"Franz\"]"
+    "import random\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "9bb1e2f0-0617-4bed-8880-c1367cf4add9",
    "metadata": {},
    "outputs": [
@@ -57,24 +56,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Luke', 'Heinz'), ('Peter', 'Karl'), ('Christine', 'Harald'), ('Gundula', 'Franz')]\n"
+      "Peter Luke\n",
+      "Christine Karl\n",
+      "Harald Gundula\n",
+      "Heinz Heinz\n",
+      "Karl Harald\n",
+      "Gundula Franz\n",
+      "Luke Peter\n",
+      "Franz Christine\n"
      ]
     }
    ],
    "source": [
-    "assert len(people) % 2 == 0\n",
-    "wichtel_pairs = []\n",
-    "while len(people) > 0:\n",
-    "    # randomly sample both wichtel\n",
-    "    wichtel1, wichtel2 = random.sample(people, 2)\n",
-    "    if not wichtel1 == wichtel2:\n",
-    "        # remove the new valid pair from the list of people:\n",
-    "        people.remove(wichtel1)\n",
-    "        people.remove(wichtel2)\n",
-    "        # add to wichtel_pairs:\n",
-    "        wichtel_pairs.append((wichtel1, wichtel2))\n",
+    "# Just shuffle:\n",
+    "people = [\"Peter\", \"Christine\", \"Harald\", \"Heinz\", \"Karl\", \"Gundula\", \"Luke\", \"Franz\"]\n",
     "\n",
-    "print(wichtel_pairs)"
+    "assert len(people) % 2 == 0\n",
+    "wichtel = people.copy()\n",
+    "\n",
+    "random.shuffle(wichtel)\n",
+    "\n",
+    "\n",
+    "for w1, w2 in zip(people, wichtel):\n",
+    "    print(w1, w2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b565f08e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wichtel pairs:\n",
+      "Peter Christine\n",
+      "Christine Harald\n",
+      "Harald Karl\n",
+      "Heinz Peter\n",
+      "Karl Gundula\n",
+      "Gundula Franz\n",
+      "Luke Luke\n",
+      "Franz Heinz\n",
+      "Identical pair: (Luke, Luke). Reshuffeling ...\n",
+      "Wichtel pairs:\n",
+      "Peter Christine\n",
+      "Christine Franz\n",
+      "Harald Heinz\n",
+      "Heinz Harald\n",
+      "Karl Peter\n",
+      "Gundula Karl\n",
+      "Luke Luke\n",
+      "Franz Gundula\n",
+      "Identical pair: (Luke, Luke). Reshuffeling ...\n",
+      "Wichtel pairs:\n",
+      "Peter Luke\n",
+      "Christine Heinz\n",
+      "Harald Franz\n",
+      "Heinz Harald\n",
+      "Karl Gundula\n",
+      "Gundula Christine\n",
+      "Luke Peter\n",
+      "Franz Karl\n",
+      "Wichtel pairs:\n",
+      "Peter Luke\n",
+      "Christine Heinz\n",
+      "Harald Franz\n",
+      "Heinz Harald\n",
+      "Karl Gundula\n",
+      "Gundula Christine\n",
+      "Luke Peter\n",
+      "Franz Karl\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shuffle but constrain identical pairs:\n",
+    "assert len(people) % 2 == 0\n",
+    "\n",
+    "wichtel = people.copy()\n",
+    "shuffling = True\n",
+    "while shuffling:\n",
+    "    random.shuffle(wichtel)\n",
+    "\n",
+    "    print(\"Wichtel pairs:\")\n",
+    "    for w1, w2 in zip(people, wichtel):\n",
+    "        print(w1, w2)\n",
+    "\n",
+    "    # check if there are no identical pairs in people and wichtel:\n",
+    "    identical_pair = False\n",
+    "    for p, w in zip(people, wichtel):\n",
+    "        if p == w:\n",
+    "            print(f\"Identical pair: ({w}, {p}). Reshuffeling ...\")\n",
+    "            identical_pair = True\n",
+    "            break\n",
+    "    if not identical_pair:\n",
+    "        shuffling = False\n",
+    "\n",
+    "print(\"Final wichtel pairs:\")\n",
+    "for w1, w2 in zip(people, wichtel):\n",
+    "    print(w1, w2)"
    ]
   },
   {
@@ -87,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "ecdf6a11-6ed6-40d8-be7f-0aa4fd9de47a",
    "metadata": {},
    "outputs": [],
@@ -105,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "1c2a04f1-a69e-49b4-b939-d02b29f129bb",
    "metadata": {},
    "outputs": [
@@ -113,7 +196,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Gundula', 'Peter'), ('Christine', 'Heinz'), ('Karl', 'Luke'), ('Franz', 'Harald')]\n"
+      "Wichtel pairs:\n",
+      "Peter Karl\n",
+      "Christine Heinz\n",
+      "Harald Franz\n",
+      "Heinz Harald\n",
+      "Karl Gundula\n",
+      "Gundula Luke\n",
+      "Luke Peter\n",
+      "Franz Christine\n",
+      "Couple as wichtel pair: (Gundula, Karl). Reshuffling ...\n",
+      "Wichtel pairs:\n",
+      "Peter Peter\n",
+      "Christine Heinz\n",
+      "Harald Gundula\n",
+      "Heinz Harald\n",
+      "Karl Franz\n",
+      "Gundula Karl\n",
+      "Luke Luke\n",
+      "Franz Christine\n",
+      "Identical pair: (Peter, Peter). Reshuffleing ...\n",
+      "Wichtel pairs:\n",
+      "Peter Harald\n",
+      "Christine Franz\n",
+      "Harald Heinz\n",
+      "Heinz Luke\n",
+      "Karl Gundula\n",
+      "Gundula Peter\n",
+      "Luke Christine\n",
+      "Franz Karl\n",
+      "Couple as wichtel pair: (Gundula, Karl). Reshuffling ...\n",
+      "Wichtel pairs:\n",
+      "Peter Gundula\n",
+      "Christine Franz\n",
+      "Harald Peter\n",
+      "Heinz Christine\n",
+      "Karl Harald\n",
+      "Gundula Karl\n",
+      "Luke Luke\n",
+      "Franz Heinz\n",
+      "Couple as wichtel pair: (Karl, Gundula). Reshuffling ...\n",
+      "Wichtel pairs:\n",
+      "Peter Gundula\n",
+      "Christine Luke\n",
+      "Harald Peter\n",
+      "Heinz Christine\n",
+      "Karl Harald\n",
+      "Gundula Karl\n",
+      "Luke Heinz\n",
+      "Franz Franz\n",
+      "Couple as wichtel pair: (Karl, Gundula). Reshuffling ...\n",
+      "Wichtel pairs:\n",
+      "Peter Harald\n",
+      "Christine Karl\n",
+      "Harald Gundula\n",
+      "Heinz Luke\n",
+      "Karl Franz\n",
+      "Gundula Christine\n",
+      "Luke Peter\n",
+      "Franz Heinz\n",
+      "\n",
+      "Final wichtel pairs:\n",
+      "Peter Harald\n",
+      "Christine Karl\n",
+      "Harald Gundula\n",
+      "Heinz Luke\n",
+      "Karl Franz\n",
+      "Gundula Christine\n",
+      "Luke Peter\n",
+      "Franz Heinz\n"
      ]
     }
    ],
@@ -123,18 +274,38 @@
     "\n",
     "assert len(people) % 2 == 0\n",
     "assert len(couples) <= len(people) // 2\n",
-    "wichtel_pairs = []\n",
-    "while len(people) > 0:\n",
-    "    # randomly sample both wichtel\n",
-    "    wichtel1, wichtel2 = random.sample(people, 2)\n",
-    "    if wichtel1 != wichtel2 and not is_couple((wichtel1, wichtel2), couples):\n",
-    "        # remove the new valid pair from the list of people:\n",
-    "        people.remove(wichtel1)\n",
-    "        people.remove(wichtel2)\n",
-    "        # add to wichtel_pairs:\n",
-    "        wichtel_pairs.append((wichtel1, wichtel2))\n",
     "\n",
-    "print(wichtel_pairs)"
+    "wichtel = people.copy()\n",
+    "shuffling = True\n",
+    "while shuffling:\n",
+    "    random.shuffle(wichtel)\n",
+    "\n",
+    "    print(\"Wichtel pairs:\")\n",
+    "    for w1, w2 in zip(people, wichtel):\n",
+    "        print(w1, w2)\n",
+    "\n",
+    "    valid_pairs = True\n",
+    "    for p, w in zip(people, wichtel):\n",
+    "\n",
+    "        # check if there are no identical pairs in people and wichtel:\n",
+    "        if p == w:\n",
+    "            print(f\"Identical pair: ({w}, {p}). Reshuffleing ...\")\n",
+    "            valid_pairs = False\n",
+    "            break\n",
+    "\n",
+    "        # check, if there are any couples as pairs:\n",
+    "        if is_couple((p, w), couples):\n",
+    "            print(f\"Couple as wichtel pair: ({w}, {p}). Reshuffling ...\")\n",
+    "            valid_pairs = False\n",
+    "            break\n",
+    "\n",
+    "    \n",
+    "    if valid_pairs:\n",
+    "        shuffling = False\n",
+    "\n",
+    "print(\"\\nFinal wichtel pairs:\")\n",
+    "for w1, w2 in zip(people, wichtel):\n",
+    "    print(w1, w2)"
    ]
   },
   {
@@ -147,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "8c11b4da-0703-4bd9-85cf-94db62455e73",
    "metadata": {},
    "outputs": [],
@@ -166,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "id": "036bda7a-a7f4-4f2f-8ab7-0fc9bc0e8962",
    "metadata": {},
    "outputs": [
@@ -174,22 +345,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "people: ['Peter', 'Christine', 'Harald', 'Heinz', 'Karl', 'Gundula', 'Luke', 'Franz'] \n",
-      "Wichtel: [('Heinz', 'Karl')]\n",
-      "people: ['Peter', 'Christine', 'Harald', 'Gundula', 'Luke', 'Franz'] \n",
-      "Wichtel: [('Heinz', 'Karl'), ('Franz', 'Christine')]\n",
-      "people: ['Peter', 'Harald', 'Gundula', 'Luke'] \n",
-      "Wichtel: [('Heinz', 'Karl'), ('Franz', 'Christine'), ('Peter', 'Luke')]\n",
-      "people: ['Harald', 'Gundula'] \n",
-      "Not converging. Resetting and starting again ...\n",
-      "people: ['Peter', 'Christine', 'Harald', 'Heinz', 'Karl', 'Gundula', 'Luke', 'Franz'] \n",
-      "Wichtel: [('Heinz', 'Luke')]\n",
-      "people: ['Peter', 'Christine', 'Harald', 'Karl', 'Gundula', 'Franz'] \n",
-      "Wichtel: [('Heinz', 'Luke'), ('Karl', 'Franz')]\n",
-      "people: ['Peter', 'Christine', 'Harald', 'Gundula'] \n",
-      "Wichtel: [('Heinz', 'Luke'), ('Karl', 'Franz'), ('Peter', 'Harald')]\n",
-      "people: ['Christine', 'Gundula'] \n",
-      "[('Heinz', 'Luke'), ('Karl', 'Franz'), ('Peter', 'Harald'), ('Christine', 'Gundula')]\n"
+      "Wichtel pairs:\n",
+      "Peter Christine\n",
+      "Christine Gundula\n",
+      "Harald Franz\n",
+      "Heinz Karl\n",
+      "Karl Peter\n",
+      "Gundula Harald\n",
+      "Luke Luke\n",
+      "Franz Heinz\n",
+      "Couple as wichtel pair: (Peter, Christine). Reshuffling ...\n",
+      "Wichtel pairs:\n",
+      "Peter Harald\n",
+      "Christine Christine\n",
+      "Harald Karl\n",
+      "Heinz Peter\n",
+      "Karl Heinz\n",
+      "Gundula Luke\n",
+      "Luke Gundula\n",
+      "Franz Franz\n",
+      "Identical pair: (Christine, Christine). Reshuffleing ...\n",
+      "Wichtel pairs:\n",
+      "Peter Gundula\n",
+      "Christine Franz\n",
+      "Harald Karl\n",
+      "Heinz Heinz\n",
+      "Karl Harald\n",
+      "Gundula Peter\n",
+      "Luke Christine\n",
+      "Franz Luke\n",
+      "Identical pair: (Heinz, Heinz). Reshuffleing ...\n",
+      "Wichtel pairs:\n",
+      "Peter Harald\n",
+      "Christine Luke\n",
+      "Harald Christine\n",
+      "Heinz Karl\n",
+      "Karl Peter\n",
+      "Gundula Gundula\n",
+      "Luke Heinz\n",
+      "Franz Franz\n",
+      "Identical pair: (Gundula, Gundula). Reshuffleing ...\n",
+      "Wichtel pairs:\n",
+      "Peter Gundula\n",
+      "Christine Christine\n",
+      "Harald Harald\n",
+      "Heinz Luke\n",
+      "Karl Franz\n",
+      "Gundula Heinz\n",
+      "Luke Peter\n",
+      "Franz Karl\n",
+      "Identical pair: (Christine, Christine). Reshuffleing ...\n",
+      "Wichtel pairs:\n",
+      "Peter Heinz\n",
+      "Christine Franz\n",
+      "Harald Harald\n",
+      "Heinz Christine\n",
+      "Karl Peter\n",
+      "Gundula Luke\n",
+      "Luke Karl\n",
+      "Franz Gundula\n",
+      "Identical pair: (Harald, Harald). Reshuffleing ...\n",
+      "Wichtel pairs:\n",
+      "Peter Harald\n",
+      "Christine Gundula\n",
+      "Harald Christine\n",
+      "Heinz Peter\n",
+      "Karl Franz\n",
+      "Gundula Luke\n",
+      "Luke Karl\n",
+      "Franz Heinz\n",
+      "\n",
+      "Final wichtel pairs:\n",
+      "Peter Harald\n",
+      "Christine Gundula\n",
+      "Harald Christine\n",
+      "Heinz Peter\n",
+      "Karl Franz\n",
+      "Gundula Luke\n",
+      "Luke Karl\n",
+      "Franz Heinz\n"
      ]
     }
    ],
@@ -201,52 +435,49 @@
     "assert len(people) % 2 == 0\n",
     "assert len(couples) <= len(people) // 2\n",
     "\n",
-    "people_copy = people.copy()\n",
+    "wichtel = people.copy()\n",
+    "shuffling = True\n",
+    "while shuffling:\n",
+    "    random.shuffle(wichtel)\n",
     "\n",
-    "wichtel_pairs = []\n",
-    "print(f\"people: {people} \")\n",
-    "while len(people) > 0:\n",
+    "    print(\"Wichtel pairs:\")\n",
+    "    for w1, w2 in zip(people, wichtel):\n",
+    "        print(w1, w2)\n",
     "\n",
-    "    \n",
+    "    valid_pairs = True\n",
+    "    for p, w in zip(people, wichtel):\n",
     "\n",
-    "    # randomly sample both wichtel\n",
-    "    sampling = True\n",
-    "    while sampling:\n",
-    "        wichtel1, wichtel2 = random.sample(people, 2)\n",
-    "        if wichtel1 != wichtel2 and not is_couple((wichtel1, wichtel2), couples) and not same_as_last_time((wichtel1, wichtel2), wichtel_pairs_last_time):\n",
-    "            sampling = False\n",
+    "        # check if there are no identical pairs in people and wichtel:\n",
+    "        if p == w:\n",
+    "            print(f\"Identical pair: ({p}, {w}). Reshuffleing ...\")\n",
+    "            valid_pairs = False\n",
+    "            break\n",
     "\n",
+    "        # check, if there are any couples as pairs:\n",
+    "        if is_couple((p, w), couples):\n",
+    "            print(f\"Couple as wichtel pair: ({p}, {w}). Reshuffling ...\")\n",
+    "            valid_pairs = False\n",
+    "            break\n",
     "\n",
-    "    # remove the new valid pair from the list of people:\n",
-    "    people.remove(wichtel1)\n",
-    "    people.remove(wichtel2)\n",
-    "    # add to wichtel_pairs:\n",
-    "    wichtel_pairs.append((wichtel1, wichtel2))\n",
-    "\n",
-    "    print(f\"Wichtel: {wichtel_pairs}\")\n",
-    "    print(f\"people: {people} \")\n",
-    "\n",
-    "    if len(people) == 2:\n",
-    "        last_wichtel_pair = tuple(people)\n",
-    "        if is_couple(last_wichtel_pair, couples) or same_as_last_time(last_wichtel_pair, wichtel_pairs_last_time):\n",
-    "            print(\"Not converging. Resetting and starting again ...\")\n",
-    "            # reset list of wichtel pairs and list of people:\n",
-    "            wichtel_pairs = []\n",
-    "            people = people_copy.copy()\n",
-    "            print(f\"people: {people} \")\n",
-    "        else:\n",
-    "            wichtel_pairs.append(last_wichtel_pair)\n",
+    "        # check, if thera are any pairs from a previous wichteling:\n",
+    "        if  same_as_last_time((p, w), wichtel_pairs_last_time):\n",
+    "            print(f\"Wichtel pair like last time accured: ({p}, {w})\")\n",
+    "            valid_pairs = False\n",
     "            break\n",
     "\n",
     "    \n",
+    "    if valid_pairs:\n",
+    "        shuffling = False\n",
     "\n",
-    "print(wichtel_pairs)"
+    "print(\"\\nFinal wichtel pairs:\")\n",
+    "for p, w in zip(people, wichtel):\n",
+    "    print(p, w)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd993eb7",
+   "id": "fe5d8885",
    "metadata": {},
    "outputs": [],
    "source": []
