--- a/Randomly_select_wichtel.ipynb
+++ b/Randomly_select_wichtel.ipynb
@@ -38,126 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "fdeb26fe-cae1-4dad-88bd-36552487b5c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "9bb1e2f0-0617-4bed-8880-c1367cf4add9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Peter Luke\n",
-      "Christine Karl\n",
-      "Harald Gundula\n",
-      "Heinz Heinz\n",
-      "Karl Harald\n",
-      "Gundula Franz\n",
-      "Luke Peter\n",
-      "Franz Christine\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Just shuffle:\n",
-    "people = [\"Peter\", \"Christine\", \"Harald\", \"Heinz\", \"Karl\", \"Gundula\", \"Luke\", \"Franz\"]\n",
-    "\n",
-    "assert len(people) % 2 == 0\n",
-    "wichtel = people.copy()\n",
-    "\n",
-    "random.shuffle(wichtel)\n",
-    "\n",
-    "\n",
-    "for w1, w2 in zip(people, wichtel):\n",
-    "    print(w1, w2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "b565f08e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wichtel pairs:\n",
-      "Peter Christine\n",
-      "Christine Harald\n",
-      "Harald Karl\n",
-      "Heinz Peter\n",
-      "Karl Gundula\n",
-      "Gundula Franz\n",
-      "Luke Luke\n",
-      "Franz Heinz\n",
-      "Identical pair: (Luke, Luke). Reshuffeling ...\n",
-      "Wichtel pairs:\n",
-      "Peter Christine\n",
-      "Christine Franz\n",
-      "Harald Heinz\n",
-      "Heinz Harald\n",
-      "Karl Peter\n",
-      "Gundula Karl\n",
-      "Luke Luke\n",
-      "Franz Gundula\n",
-      "Identical pair: (Luke, Luke). Reshuffeling ...\n",
-      "Wichtel pairs:\n",
-      "Peter Luke\n",
-      "Christine Heinz\n",
-      "Harald Franz\n",
-      "Heinz Harald\n",
-      "Karl Gundula\n",
-      "Gundula Christine\n",
-      "Luke Peter\n",
-      "Franz Karl\n",
-      "Wichtel pairs:\n",
-      "Peter Luke\n",
-      "Christine Heinz\n",
-      "Harald Franz\n",
-      "Heinz Harald\n",
-      "Karl Gundula\n",
-      "Gundula Christine\n",
-      "Luke Peter\n",
-      "Franz Karl\n"
-     ]
-    }
-   ],
-   "source": [
-    "# shuffle but constrain identical pairs:\n",
-    "assert len(people) % 2 == 0\n",
-    "\n",
-    "wichtel = people.copy()\n",
-    "shuffling = True\n",
-    "while shuffling:\n",
-    "    random.shuffle(wichtel)\n",
-    "\n",
-    "    print(\"Wichtel pairs:\")\n",
-    "    for w1, w2 in zip(people, wichtel):\n",
-    "        print(w1, w2)\n",
-    "\n",
-    "    # check if there are no identical pairs in people and wichtel:\n",
-    "    identical_pair = False\n",
-    "    for p, w in zip(people, wichtel):\n",
-    "        if p == w:\n",
-    "            print(f\"Identical pair: ({w}, {p}). Reshuffeling ...\")\n",
-    "            identical_pair = True\n",
-    "            break\n",
-    "    if not identical_pair:\n",
-    "        shuffling = False\n",
-    "\n",
-    "print(\"Final wichtel pairs:\")\n",
-    "for w1, w2 in zip(people, wichtel):\n",
-    "    print(w1, w2)"
+    "import random"
    ]
   },
   {
@@ -170,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "ecdf6a11-6ed6-40d8-be7f-0aa4fd9de47a",
    "metadata": {},
    "outputs": [],
@@ -187,128 +73,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "1c2a04f1-a69e-49b4-b939-d02b29f129bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wichtel pairs:\n",
-      "Peter Karl\n",
-      "Christine Heinz\n",
-      "Harald Franz\n",
-      "Heinz Harald\n",
-      "Karl Gundula\n",
-      "Gundula Luke\n",
-      "Luke Peter\n",
-      "Franz Christine\n",
-      "Couple as wichtel pair: (Gundula, Karl). Reshuffling ...\n",
-      "Wichtel pairs:\n",
-      "Peter Peter\n",
-      "Christine Heinz\n",
-      "Harald Gundula\n",
-      "Heinz Harald\n",
-      "Karl Franz\n",
-      "Gundula Karl\n",
-      "Luke Luke\n",
-      "Franz Christine\n",
-      "Identical pair: (Peter, Peter). Reshuffleing ...\n",
-      "Wichtel pairs:\n",
-      "Peter Harald\n",
-      "Christine Franz\n",
-      "Harald Heinz\n",
-      "Heinz Luke\n",
-      "Karl Gundula\n",
-      "Gundula Peter\n",
-      "Luke Christine\n",
-      "Franz Karl\n",
-      "Couple as wichtel pair: (Gundula, Karl). Reshuffling ...\n",
-      "Wichtel pairs:\n",
-      "Peter Gundula\n",
-      "Christine Franz\n",
-      "Harald Peter\n",
-      "Heinz Christine\n",
-      "Karl Harald\n",
-      "Gundula Karl\n",
-      "Luke Luke\n",
-      "Franz Heinz\n",
-      "Couple as wichtel pair: (Karl, Gundula). Reshuffling ...\n",
-      "Wichtel pairs:\n",
-      "Peter Gundula\n",
-      "Christine Luke\n",
-      "Harald Peter\n",
-      "Heinz Christine\n",
-      "Karl Harald\n",
-      "Gundula Karl\n",
-      "Luke Heinz\n",
-      "Franz Franz\n",
-      "Couple as wichtel pair: (Karl, Gundula). Reshuffling ...\n",
-      "Wichtel pairs:\n",
-      "Peter Harald\n",
-      "Christine Karl\n",
-      "Harald Gundula\n",
-      "Heinz Luke\n",
-      "Karl Franz\n",
-      "Gundula Christine\n",
-      "Luke Peter\n",
-      "Franz Heinz\n",
-      "\n",
-      "Final wichtel pairs:\n",
-      "Peter Harald\n",
-      "Christine Karl\n",
-      "Harald Gundula\n",
-      "Heinz Luke\n",
-      "Karl Franz\n",
-      "Gundula Christine\n",
-      "Luke Peter\n",
-      "Franz Heinz\n"
-     ]
-    }
-   ],
-   "source": [
-    "people = [\"Peter\", \"Christine\", \"Harald\", \"Heinz\", \"Karl\", \"Gundula\", \"Luke\", \"Franz\"]\n",
-    "couples = [(\"Peter\", \"Christine\"), (\"Karl\", \"Gundula\")]\n",
-    "\n",
-    "assert len(people) % 2 == 0\n",
-    "assert len(couples) <= len(people) // 2\n",
-    "\n",
-    "wichtel = people.copy()\n",
-    "shuffling = True\n",
-    "while shuffling:\n",
-    "    random.shuffle(wichtel)\n",
-    "\n",
-    "    print(\"Wichtel pairs:\")\n",
-    "    for w1, w2 in zip(people, wichtel):\n",
-    "        print(w1, w2)\n",
-    "\n",
-    "    valid_pairs = True\n",
-    "    for p, w in zip(people, wichtel):\n",
-    "\n",
-    "        # check if there are no identical pairs in people and wichtel:\n",
-    "        if p == w:\n",
-    "            print(f\"Identical pair: ({w}, {p}). Reshuffleing ...\")\n",
-    "            valid_pairs = False\n",
-    "            break\n",
-    "\n",
-    "        # check, if there are any couples as pairs:\n",
-    "        if is_couple((p, w), couples):\n",
-    "            print(f\"Couple as wichtel pair: ({w}, {p}). Reshuffling ...\")\n",
-    "            valid_pairs = False\n",
-    "            break\n",
-    "\n",
-    "    \n",
-    "    if valid_pairs:\n",
-    "        shuffling = False\n",
-    "\n",
-    "print(\"\\nFinal wichtel pairs:\")\n",
-    "for w1, w2 in zip(people, wichtel):\n",
-    "    print(w1, w2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9d067474-d5d7-4c0f-9e3f-5b875858004e",
    "metadata": {},
@@ -318,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "8c11b4da-0703-4bd9-85cf-94db62455e73",
    "metadata": {},
    "outputs": [],
@@ -337,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "036bda7a-a7f4-4f2f-8ab7-0fc9bc0e8962",
    "metadata": {},
    "outputs": [
@@ -345,133 +109,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "Wichtel pairs:\n",
-      "Peter Christine\n",
-      "Christine Gundula\n",
-      "Harald Franz\n",
-      "Heinz Karl\n",
-      "Karl Peter\n",
-      "Gundula Harald\n",
-      "Luke Luke\n",
-      "Franz Heinz\n",
-      "Couple as wichtel pair: (Peter, Christine). Reshuffling ...\n",
-      "Wichtel pairs:\n",
-      "Peter Harald\n",
-      "Christine Christine\n",
-      "Harald Karl\n",
-      "Heinz Peter\n",
-      "Karl Heinz\n",
-      "Gundula Luke\n",
-      "Luke Gundula\n",
-      "Franz Franz\n",
+      "[('Peter', 'Luke'), ('Christine', 'Christine'), ('Harald', 'Karl'), ('Heinz', 'Peter'), ('Karl', 'Harald'), ('Gundula', 'Franz'), ('Luke', 'Heinz'), ('Franz', 'Gundula')]\n",
       "Identical pair: (Christine, Christine). Reshuffleing ...\n",
+      "\n",
       "Wichtel pairs:\n",
-      "Peter Gundula\n",
-      "Christine Franz\n",
-      "Harald Karl\n",
-      "Heinz Heinz\n",
-      "Karl Harald\n",
-      "Gundula Peter\n",
-      "Luke Christine\n",
-      "Franz Luke\n",
-      "Identical pair: (Heinz, Heinz). Reshuffleing ...\n",
+      "[('Peter', 'Heinz'), ('Christine', 'Harald'), ('Harald', 'Franz'), ('Heinz', 'Peter'), ('Karl', 'Karl'), ('Gundula', 'Luke'), ('Luke', 'Christine'), ('Franz', 'Gundula')]\n",
+      "Identical pair: (Karl, Karl). Reshuffleing ...\n",
+      "\n",
       "Wichtel pairs:\n",
-      "Peter Harald\n",
-      "Christine Luke\n",
-      "Harald Christine\n",
-      "Heinz Karl\n",
-      "Karl Peter\n",
-      "Gundula Gundula\n",
-      "Luke Heinz\n",
-      "Franz Franz\n",
-      "Identical pair: (Gundula, Gundula). Reshuffleing ...\n",
+      "[('Peter', 'Peter'), ('Christine', 'Gundula'), ('Harald', 'Luke'), ('Heinz', 'Karl'), ('Karl', 'Harald'), ('Gundula', 'Franz'), ('Luke', 'Christine'), ('Franz', 'Heinz')]\n",
+      "Identical pair: (Peter, Peter). Reshuffleing ...\n",
+      "\n",
       "Wichtel pairs:\n",
-      "Peter Gundula\n",
-      "Christine Christine\n",
-      "Harald Harald\n",
-      "Heinz Luke\n",
-      "Karl Franz\n",
-      "Gundula Heinz\n",
-      "Luke Peter\n",
-      "Franz Karl\n",
-      "Identical pair: (Christine, Christine). Reshuffleing ...\n",
-      "Wichtel pairs:\n",
-      "Peter Heinz\n",
-      "Christine Franz\n",
-      "Harald Harald\n",
-      "Heinz Christine\n",
-      "Karl Peter\n",
-      "Gundula Luke\n",
-      "Luke Karl\n",
-      "Franz Gundula\n",
-      "Identical pair: (Harald, Harald). Reshuffleing ...\n",
-      "Wichtel pairs:\n",
-      "Peter Harald\n",
-      "Christine Gundula\n",
-      "Harald Christine\n",
-      "Heinz Peter\n",
-      "Karl Franz\n",
-      "Gundula Luke\n",
-      "Luke Karl\n",
-      "Franz Heinz\n",
+      "[('Peter', 'Luke'), ('Christine', 'Gundula'), ('Harald', 'Karl'), ('Heinz', 'Franz'), ('Karl', 'Peter'), ('Gundula', 'Heinz'), ('Luke', 'Harald'), ('Franz', 'Christine')]\n",
       "\n",
       "Final wichtel pairs:\n",
-      "Peter Harald\n",
-      "Christine Gundula\n",
-      "Harald Christine\n",
-      "Heinz Peter\n",
-      "Karl Franz\n",
-      "Gundula Luke\n",
-      "Luke Karl\n",
-      "Franz Heinz\n"
+      "[('Peter', 'Luke'), ('Christine', 'Gundula'), ('Harald', 'Karl'), ('Heinz', 'Franz'), ('Karl', 'Peter'), ('Gundula', 'Heinz'), ('Luke', 'Harald'), ('Franz', 'Christine')]\n"
      ]
     }
    ],
    "source": [
-    "people = [\"Peter\", \"Christine\", \"Harald\", \"Heinz\", \"Karl\", \"Gundula\", \"Luke\", \"Franz\"]\n",
+    "\n",
+    "def create_wichtel_pairs(donors:list, couples:list, wichtel_pairs_last_time:list, verbose=False):\n",
+    "\n",
+    "    assert len(donors) % 2 == 0\n",
+    "    assert len(couples) <= len(donors) // 2\n",
+    "\n",
+    "    acceptors = donors.copy()\n",
+    "    shuffling = True\n",
+    "    while shuffling:\n",
+    "        random.shuffle(acceptors)\n",
+    "        \n",
+    "        if verbose:\n",
+    "            print(\"\\nWichtel pairs:\")\n",
+    "            print([(d, a) for d, a in zip(donors, acceptors)])\n",
+    "\n",
+    "        valid_pairs = True\n",
+    "        for d, a in zip(donors, acceptors):\n",
+    "\n",
+    "            # check if there are no identical pairs in donors and acceptors:\n",
+    "            if d == a:\n",
+    "                if verbose:\n",
+    "                    print(f\"Identical pair: ({d}, {a}). Reshuffleing ...\")\n",
+    "                valid_pairs = False\n",
+    "                break\n",
+    "\n",
+    "            # check, if there are any couples as pairs:\n",
+    "            if is_couple((d, a), couples):\n",
+    "                if verbose:\n",
+    "                    print(f\"Couple as wichtel pair: ({d}, {a}). Reshuffling ...\")\n",
+    "                valid_pairs = False\n",
+    "                break\n",
+    "\n",
+    "            # check, if thera are any pairs from a previous wichteling:\n",
+    "            if  same_as_last_time((d, a), wichtel_pairs_last_time):\n",
+    "                if verbose:\n",
+    "                    print(f\"Wichtel pair like last time accured: ({d}, {a})\")\n",
+    "                valid_pairs = False\n",
+    "                break\n",
+    "\n",
+    "        \n",
+    "        if valid_pairs:\n",
+    "            shuffling = False\n",
+    "\n",
+    "    wichtel_pairs = [(d, a) for d, a in zip(donors, acceptors)]\n",
+    "\n",
+    "    if verbose:\n",
+    "        print(\"\\nFinal wichtel pairs:\")\n",
+    "        print(wichtel_pairs)\n",
+    "\n",
+    "\n",
+    "    return wichtel_pairs\n",
+    "\n",
+    "donors = [\"Peter\", \"Christine\", \"Harald\", \"Heinz\", \"Karl\", \"Gundula\", \"Luke\", \"Franz\"]\n",
     "couples = [(\"Peter\", \"Christine\"), (\"Karl\", \"Gundula\")]\n",
     "wichtel_pairs_last_time = [('Harald', 'Gundula'), ('Luke', 'Ferdinant'), ('Heiz', 'Franz'), ('Christine', 'Karl')]\n",
     "\n",
-    "assert len(people) % 2 == 0\n",
-    "assert len(couples) <= len(people) // 2\n",
-    "\n",
-    "wichtel = people.copy()\n",
-    "shuffling = True\n",
-    "while shuffling:\n",
-    "    random.shuffle(wichtel)\n",
-    "\n",
-    "    print(\"Wichtel pairs:\")\n",
-    "    for w1, w2 in zip(people, wichtel):\n",
-    "        print(w1, w2)\n",
-    "\n",
-    "    valid_pairs = True\n",
-    "    for p, w in zip(people, wichtel):\n",
-    "\n",
-    "        # check if there are no identical pairs in people and wichtel:\n",
-    "        if p == w:\n",
-    "            print(f\"Identical pair: ({p}, {w}). Reshuffleing ...\")\n",
-    "            valid_pairs = False\n",
-    "            break\n",
-    "\n",
-    "        # check, if there are any couples as pairs:\n",
-    "        if is_couple((p, w), couples):\n",
-    "            print(f\"Couple as wichtel pair: ({p}, {w}). Reshuffling ...\")\n",
-    "            valid_pairs = False\n",
-    "            break\n",
-    "\n",
-    "        # check, if thera are any pairs from a previous wichteling:\n",
-    "        if  same_as_last_time((p, w), wichtel_pairs_last_time):\n",
-    "            print(f\"Wichtel pair like last time accured: ({p}, {w})\")\n",
-    "            valid_pairs = False\n",
-    "            break\n",
-    "\n",
-    "    \n",
-    "    if valid_pairs:\n",
-    "        shuffling = False\n",
-    "\n",
-    "print(\"\\nFinal wichtel pairs:\")\n",
-    "for p, w in zip(people, wichtel):\n",
-    "    print(p, w)"
+    "wichtel_pairs = create_wichtel_pairs(donors, couples, wichtel_pairs_last_time, verbose=True)\n"
    ]
   },
   {
